apps/base/litellm/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: litellm
  namespace: litellm
spec:
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
  selector:
    app: litellm
  type: ClusterIP
